--- a/BuscadorLibros/app/src/main/AndroidManifest.xml
+++ b/BuscadorLibros/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.lab_windows.buscadorlibros">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -10,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".DetailActivity"
+                    android:label="@string/detalles"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
