--- a/YGO/YGO/package.json
+++ b/YGO/YGO/package.json
@@ -33,6 +33,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -41,7 +42,7 @@
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.3.1",
+    "@angular/cli": "7.3.6",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
