--- a/Ionic App/app/package.json
+++ b/Ionic App/app/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/toast": "^5.3.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
     "angularfire2": "^5.1.1",
@@ -33,6 +34,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.8.6",
     "rxjs": "~6.3.3",
@@ -75,7 +77,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
       "android"
